# codeframe

./: .coveragerc  .env.example  .env.production.example  .env.staging.example  .gitignore  .gitmessage  .pre-commit-config.yaml  .staging-server.conf.example  .test-failures.md  AGENTS.md  AGENT_REFACTORING_SUMMARY.md  AGILE_SPRINTS.md  AI_Development_Enforcement_Guide.md  CHANGELOG.md  CHECKPOINT_API_SUMMARY.md  CLAUDE.md  CODEFRAME_ISSUES_ANALYSIS.md  CODEFRAME_SPEC.md  CONCEPTS_INTEGRATION.md  CONCEPTS_RESOLVED.md  CONTRIBUTING.md  DEBUG_WEBSOCKET.md  DEPLOY_CF46_FIX.md  DIAGNOSE_FRONTEND.md  E2E_PLAYWRIGHT_FAILURE_ANALYSIS.md  E2E_TESTS_FIX_PLAN.md  FASTAPI_ROUTER_REFACTORING_TEST_REPORT.md  FRONTEND_TESTING_CHECKLIST.md  LICENSING.md  PAUSE_ANALYSIS_SUMMARY.md  PAUSE_ARCHITECTURE_DIAGRAM.txt  PAUSE_IMPLEMENTATION_ANALYSIS.md  PAUSE_IMPLEMENTATION_INDEX.md  PHASE1_API_ENDPOINT_ANALYSIS.md  PHASE_10_SUMMARY.md  PRD.md  PRIVACY.md  QUICK_FIX.md  QUICK_REFERENCE_AGENT_ASSIGNMENT.md  README.md  (+30 more)
.beads/: beads.db  cf.backup-pre-migrate-20251106-195303.db  cf.db  daemon-error  issues.jsonl
.claude/: rules.md  settings.local.json
.github/: dependabot.yml
.opencode-tmp/: issue-861.diff  review-prompt.md
.serena/: project.yml
claudedocs/: 2025-12-03_SESSION_playwright-e2e.md  2025-12-04_SESSION_review-findings-ui.md  2025-12-04_SESSION_taskstats-implementation.md  2025-12-18_SESSION_project-get-status.md  AGENT_ARCHITECTURE_FLEXIBILITY_ANALYSIS.md  AGENT_CONFIGURATION_ARCHITECTURE.md  AGENT_REFACTOR_COMPLETE.md  BASH_OPERATIONS_MIGRATION_SUMMARY.md  CF-14_TEST_REPORT.md  MIGRATION_001_SUMMARY.md  PHASE2_SESSION_SUMMARY.md  PHASE2_VERIFICATION_REPORT.md  SESSION.md  SESSION_2025-11-30_FINAL.md  SIMPLE_ASSIGNMENT_APPROACH.md  SPRINT_4_FINAL_STATUS.md  SPRINT_4_READY.md  TASK_2_3_VERIFICATION.md  TDD_CF11_RESULTS.md  agent_definition_loader_summary.md  cf-15.2-answer-capture-summary.md  github-workflows-design.md  project-schema-test-results.md  sprint4-e2e-test-results.md  sprint4-final-e2e-status.md  sprint4-gui-checklist.md  sprint4-integration-test-issue.md  sprint4-integration-test-report.md  sprint4-p0-BREAKTHROUGH.md  sprint4-p0-COMPLETE-STATUS.md  sprint4-p0-COMPLETE.md  sprint4-p0-HANDOFF.md  sprint4-p0-SOLUTION.md  sprint4-p0-final-status.md  sprint4-p0-implementation-summary.md  sprint4-pr-summary.md  sprint4-regression-test-report.md  sprint4-test-analysis.md  sprint4-test-coverage-report.md  sprint4-testing-checklist.md  (+1 more)
codeframe/: __init__.py  __main__.py  cli.py
deploy/: Caddyfile.example  README.md
docs/: AGENT_ARCHITECTURE_CRITIQUE.md  AGENT_ARCHITECTURE_RESEARCH.md  AGENT_FACTORY_SUMMARY.md  AGENT_IMPLEMENTATION_TASKS.md  AGENT_SYSTEM_REFERENCE.md  AGENT_V3_UNIFIED_PLAN.md  AI_Development_Enforcement_Guide.md  API_CONTRACT_ROADMAP.md  API_IMPROVEMENTS_FUTURE.md  BATCH_EXECUTION_PLAN.md  BIG_PICTURE.md  BOTTLENECK_DETECTION.md  CLAUDE.md  CLI_WIREFRAME.md  CRITICAL_GAP_IMPLEMENTATION_PLAN.md  FEATURE_ROADMAP.md  GAP_ANALYSIS_SUMMARY.md  GOLDEN_PATH.md  ISSUE_330_PRD_VIEW_PLAN.md  ISSUE_331_TASK_BOARD_PLAN.md  MULTI_AGENT_SCHEMA_DESIGN.md  PHASE_25_VALIDATION_REPORT.md  PHASE_2_BUSINESS_LOGIC_AUDIT.md  PHASE_2_CLI_API_MAPPING.md  PHASE_2_DEVELOPER_GUIDE.md  PHASE_2_GAP_ANALYSIS.md  PHASE_2_ROUTE_AUDIT.md  PHASE_2_ROUTE_CONSISTENCY.md  PHASE_3_UI_ARCHITECTURE.md  PRODUCT_ROADMAP.md  QUICKSTART.md  REACT_AGENT_ARCHITECTURE.md  README.md  REMOTE_STAGING_DEPLOYMENT.md  SCHEMA_DIAGRAM.md  SDK_HOOK_INTEGRATION_VALIDATION.md  SDK_MIGRATION_IMPLEMENTATION_PLAN.md  SDK_OVERLAP_ANALYSIS.md  SPRINT2_PLAN.md  SPRINT_STANDARDS.md  (+18 more)
examples/: agent_definition_usage.py  agent_factory_usage.py
legacydocs/: AGENT_FACTORY_GUIDE.md  API_IMPROVEMENTS_FUTURE.md  CF-41_BACKEND_WORKER_AGENT_DESIGN.md  CLAUDE.md  CODEFRAME_ISSUES_ANALYSIS.md  CODEFRAME_USER_DOCUMENTATION.md  DEPLOYMENT.md  ENFORCEMENT_ARCHITECTURE.md  FASTAPI_ROUTER_ANALYSIS.md  QUICK_REFERENCE_AGENT_ASSIGNMENT.md  README.md  SDK_MIGRATION_IMPLEMENTATION_PLAN.md  SDK_OVERLAP_ANALYSIS.md  STAGING_SERVER.md  TESTING_STRATEGY.md  discovery-socratic-methodology.md  e2e-test-failures-2026-01-13.md  nginx-setup-complete.md  quality_gate_tool_flow.txt  self_correction_workflow.md  session-lifecycle.md  task_2_4_implementation_handoff.md  updating_existing_tests.md  ux-ui-committee-report-2026-01-13.md
scripts/: WINDOWS_AUTOSTART_SETUP.md  audit_mocked_tests.py  deploy-staging.sh  deploy.sh  detect-skip-abuse.py  fix_api_schema.py  fix_workspace_env.py  health-check.sh  install-health-check.sh  install-systemd-service.sh  lifecycle  quality-ratchet-example.json  quality-ratchet.py  remote-setup.sh  seed-staging.sh  start-staging-windows.ps1  start-staging.sh  telemetry_collector.py  test-websocket.py  verify-ai-claims.sh  verify_migration_001.py
specs/: CODEFRAME_SPEC.md
sprints/: README.md  sprint-00-foundation.md  sprint-01-hello-codeframe.md  sprint-02-socratic-discovery.md  sprint-03-single-agent.md  sprint-04-multi-agent.md  sprint-04.5-project-schema.md  sprint-05-async-workers.md  sprint-06-human-loop.md  sprint-07-context-mgmt.md  sprint-08-agent-maturity.md  sprint-08-quality-enforcement.md  sprint-09-polish.md  sprint-09.5-critical-ux-fixes.md  sprint-10-polish.md
systemd/: codeframe-health-check.service  codeframe-health-check.timer  codeframe-staging.service
tasks/: todo.md
tests/: README.md  __init__.py  conftest.py  test_agent_factory.py  test_agent_lifecycle.py  test_agent_pool_manager.py  test_anthropic_provider.py  test_api_discovery_progress.py  test_api_issues.py  test_api_prd.py  test_async_debug.py  test_backend_worker_agent.py  test_blocker_answer_injection.py  test_blocker_expiration.py  test_blocker_expiration_cron.py  test_blocker_expiration_minimal.py  test_blocker_expiration_simple.py  test_blocker_resolution_api.py  test_blocker_type_validation.py  test_blockers.py  test_chat_api.py  test_codebase_index.py  test_config.py  test_correction_attempt.py  test_correction_database.py  test_database.py  test_database_git_branches.py  test_database_issues.py  test_database_schema.py  (+40 more)
(+1700 files in other folders)
