[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeframe"
version = "0.1.0"
description = "Fully Remote Autonomous Multiagent Environment for coding"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Frank Bria", email = "frankbria@example.com"}
]
keywords = ["ai", "agents", "autonomous", "coding", "development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.18.0",
    "tenacity>=8.2.0",
    "claude-agent-sdk>=0.1.10",
    "openai>=1.12.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "aiohttp>=3.9.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "requests>=2.31.0",
    "gitpython>=3.1.40",
    "pyyaml>=6.0.0",
    "tree-sitter>=0.20.4",
    "tree-sitter-python>=0.20.4",
    "tree-sitter-javascript>=0.20.3",
    "tree-sitter-typescript>=0.20.3",
    "tiktoken>=0.12.0",
    "radon>=6.0.1",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
    "pytest-asyncio>=1.2.0",
    "pytest-json-report>=1.5.0",
    "hypothesis>=6.148.0",
    "fastapi-users[sqlalchemy]>=15.0.2",
    "python-jose[cryptography]>=3.4.0",
    "passlib[argon2]>=1.7.4",
    "keyring>=24.0.0",
    "jinja2>=3.1.6",
    "slowapi>=0.1.9",
    "rapidfuzz>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-json-report>=1.5.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.5.0",
    "hypothesis>=6.0.0",
]

[project.scripts]
codeframe = "codeframe.cli.app:app"
cf = "codeframe.cli.app:app"  # Short alias for convenience

[project.urls]
Homepage = "https://github.com/frankbria/codeframe"
Repository = "https://github.com/frankbria/codeframe"
Issues = "https://github.com/frankbria/codeframe/issues"

[tool.setuptools]
packages = ["codeframe"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "testsprite_tests/",
    ".venv/",
    "build/",
    "dist/",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F841"]  # Allow unused variables in tests

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false

# Only check critical modules for type safety (Sprint 10 core code)
# Exclude all other modules to unblock CI
[[tool.mypy.overrides]]
module = [
    "codeframe.*",
]
ignore_errors = true

# Enable strict checking only for Sprint 10 core modules
[[tool.mypy.overrides]]
module = [
    "codeframe.core.models",
    "codeframe.lib.quality_gates",
    "codeframe.lib.checkpoint_manager",
    "codeframe.lib.metrics_tracker",
]
ignore_errors = false
disallow_untyped_defs = true

[tool.coverage.run]
branch = true
source = ["codeframe"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "pytest-cov>=7.0.0",
]
